@@ -1,5 +1,5 @@
 {
-  "count": 23,
+  "count": 24,
   "uniques": 3,
   "clones": [
     {
@@ -50,6 +50,11 @@
     {
       "timestamp": "2022-07-22T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-23T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
